--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# ------------------------------------------------------------------------------------------ #
+# github info #
+
 # Compiled class file
 *.class
 
@@ -20,3 +23,20 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# ------------------------------------------------------------------------------------------ #
+# by info #
+
+# Maven #
+target/
+
+# IDEA #
+.idea/
+*.iml
+
+# Eclipse #
+.settings/
+.metadata
+.classpath
+.project
+Servers/
