--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.by/ztc</groupId>
+  <groupId>com.by.ztc</groupId>
   <artifactId>ZToolCollection</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -17,5 +17,33 @@
   </dependencies>
   <build>
     <finalName>ZToolCollection</finalName>
+
+    <!-- # 配置tomcat插件-->
+    <pluginManagement>
+      <plugins>
+        <!-- tomcat 6 -->
+        <!--<plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat6-maven-plugin</artifactId>
+          <version>2.0-SNAPSHOT</version>
+          <configuration>
+            <url>http://localhost:8080/ZToolCollection</url>
+            <server>tomcat</server>
+          </configuration>
+        </plugin>-->
+        <!-- tomcat 7 -->
+        <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.0-SNAPSHOT</version>
+          <configuration>
+            <url>http://localhost:8080/ZToolCollection</url>
+            <server>tomcat</server>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
   </build>
+
 </project>
