加入spring mvc 日志

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<!-- tomcat 7 web.xml head-->
+<!-- tomcat 7 web.xml head 此处使用的web.xml最好还是使用tomcat中的，标准-->
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
@@ -26,14 +26,63 @@
   <description>
     Welcome to ZToolCollection
   </description>
-  
+
+
+
+
+
+
+  <!-- 配置spring容器的servlet过滤 -->
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath*:/xml/ztc-web-context.xml</param-value>
+  </context-param>
+  <!-- 所有的servlet过滤器造成共享Spring容器 -->
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+
+  <filter>
+    <filter-name>csrfFilter</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    <async-supported>true</async-supported>
+  </filter>
+  <filter-mapping>
+    <filter-name>csrfFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <!-- Processes application requests -->
+  <servlet>
+    <servlet-name>ztcServlet</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath*:/xml/ztc-servlet-context.xml</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+    <async-supported>true</async-supported>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>ztcServlet</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+
+
+
+
+
+
+
+
   <welcome-file-list>
-    <welcome-file>/index.jsp</welcome-file>
+    <welcome-file>/</welcome-file>
   </welcome-file-list>
 
   <error-page>
     <error-code>404</error-code>
-    <location>/error404.jsp</location>
+    <location>/WEB-INF/page/error/404.jsp</location>
   </error-page>
 
 </web-app>
