--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,67 +22,64 @@
          version="3.0"
          metadata-complete="true">
 
-  <display-name>ZToolCollection</display-name>
-  <description>
-    Welcome to ZToolCollection
-  </description>
+    <display-name>ZToolCollection</display-name>
+    <description>
+        Welcome to ZToolCollection
+    </description>
 
 
+    <!-- 配置web.xml，使其具有springmvc特性，主要配置两处，一个是ContextLoaderListener，一个是DispatcherServlet -->
 
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath*:/xml/ztc-web-context.xml</param-value>
+    </context-param>
+    <!-- 配置ContextLoaderListener表示，该工程要以spring的方式启动。启动时会默认在/WEB-INF目录下查找applicationContext.xml作为spring容器的配置文件，该文件里可以初始化一些bean -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
 
+    <!-- 字符集过滤器 -->
+    <filter>
+        <filter-name>encodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
+    <!-- spring mvc 配置 -->
+    <!-- 配置DispatcherServlet表示，该工程将采用springmvc的方式。启动时也会默认在/WEB-INF目录下查找XXX-servlet.xml作为配置文件，
+        XXX就是DispatcherServlet的名字，该文件中将配置两项重要的mvc特性：HandlerMapping,负责为DispatcherServlet这个前端控制器的请求查找Controller；
+        ViewResolver,负责为DispatcherServlet查找ModelAndView的视图解析器。
+        此处使用指定的配置文件spring-mvc.xml -->
+    <servlet>
+        <servlet-name>ztcServlet</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <!--<param-value>/WEB-INF/classes/spring-mvc-servlet.xml</param-value>-->
+            <param-value>classpath*:/xml/ztc-springmvc-context.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ztcServlet</servlet-name>
+        <url-pattern>*.ztc</url-pattern>
+    </servlet-mapping>
 
-  <!-- 配置spring容器的servlet过滤 -->
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>classpath*:/xml/ztc-web-context.xml</param-value>
-  </context-param>
-  <!-- 所有的servlet过滤器造成共享Spring容器 -->
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 
-  <filter>
-    <filter-name>csrfFilter</filter-name>
-    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    <async-supported>true</async-supported>
-  </filter>
-  <filter-mapping>
-    <filter-name>csrfFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-
-  <!-- Processes application requests -->
-  <servlet>
-    <servlet-name>ztcServlet</servlet-name>
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    <init-param>
-      <param-name>contextConfigLocation</param-name>
-      <param-value>classpath*:/xml/ztc-servlet-context.xml</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-    <async-supported>true</async-supported>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>ztcServlet</servlet-name>
-    <url-pattern>/</url-pattern>
-  </servlet-mapping>
-
-
-
-
-
-
-
-
-  <welcome-file-list>
-    <welcome-file>/</welcome-file>
-  </welcome-file-list>
-
-  <error-page>
-    <error-code>404</error-code>
-    <location>/WEB-INF/page/error/404.jsp</location>
-  </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/pages/errors/404.jsp</location>
+    </error-page>
 
 </web-app>
